--- a/css/style.css
+++ b/css/style.css
@@ -116,32 +116,35 @@ border-radius: 500px;
 
 
 footer {
-height: 200px;
+min-height: 140px;
 background: #fff;
 color: #000;
 }
 footer p {
-padding: 0.5em 1em 0.5em 0;
+padding: 45px 0 45px 0;
+margin: 0;
+}
+footer nav {
+padding: 35px 0 35px 0;
 margin: 0;
 }
 footer .social-icon {
-  margin: 0.1em;
-  opacity: 0.9;
-  color: #999;
+  margin: 0 0.1em 0 0.1em;
+  opacity: 1;
+  color: #5E6B75;
   font-size: 50px;
 }
 footer .social-icon:hover {
-  opacity: 1;
-  color: #999;
+  opacity: 0.7;
+  color: #5E6B75;
   font-size: 50px;
 }
 footer img {
-  margin-top: 20px;
-  height: 150px;
-  opacity: 0.9;
+  height: 50px;
+  opacity: 1;
 }
 footer img:hover{
-  opacity: 1;
+  opacity: 0.7;
 }
 
 header a {
