--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ background-size: cover;-webkit-background-size: cover;-moz-background-size: cove
 .ist .opacidade {background: url(http://sapoblogs.do.sapo.pt/temp/classico_opacidade.png) repeat; padding:1em 0; height: 500px;}
 
 /* Speakers */
-.speakers {overflow:hidden; background: url('../img/speakers.jpg') center no-repeat;;  background-color: transparent; background-size: cover;
+.speakers {overflow:hidden; background: url('../img/speakers1.jpg') center no-repeat;;  background-color: transparent; background-size: cover;
 background-size: cover;-webkit-background-size: cover;-moz-background-size: cover;background-size: cover;background-attachment: fixed;background-position: center center;background-position-x: 50%;background-position-y: 50%;background-repeat: no-repeat;}
 .speakers h1 { font-family: ostrich_sans_inlineregular, sans-serif; text-align: center; margin:2em 0 0 0; padding:0; font-size: 4em;}
 .speakers h1 a, .speakers h1 a:link, .speakers h1 a:visited { color:#FFFFFF; text-decoration:none;}
