--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,15 @@ background-size: cover;-webkit-background-size: cover;-moz-background-size: cove
 .speakers .description { font-family: Trebuchet MS, Arial, Helvetica, sans-serif; margin:1em auto; width:60%; padding:10px 0 10px 0; color: #FFFFFF; text-align: center;}
 .speakers .opacidade {background: url(http://sapoblogs.do.sapo.pt/temp/classico_opacidade.png) repeat; padding:1em 0; height: 500px;}
 
+/* workshops */
+.workshops {overflow:hidden; background: url('../img/workshops.jpg') center no-repeat;;  background-color: transparent; background-size: cover;
+background-size: cover;-webkit-background-size: cover;-moz-background-size: cover;background-size: cover;background-attachment: fixed;background-position: center center;background-position-x: 50%;background-position-y: 50%;background-repeat: no-repeat;}
+.workshops h1 { font-family: ostrich_sans_inlineregular, sans-serif; text-align: center; margin:2em 0 0 0; padding:0; font-size: 4em;}
+.workshops h1 a, .workshops h1 a:link, .workshops h1 a:visited { color:#FFFFFF; text-decoration:none;}
+.workshops h1 a:hover {text-decoration:none;}
+.workshops .description { font-family: Trebuchet MS, Arial, Helvetica, sans-serif; margin:1em auto; width:60%; padding:10px 0 10px 0; color: #FFFFFF; text-align: center;}
+.workshops .opacidade {background: url(http://sapoblogs.do.sapo.pt/temp/classico_opacidade.png) repeat; padding:1em 0; height: 500px;}
+
 /* sponsors */
 .sponsors {overflow:hidden; background: url('../img/sponsors.jpg') center no-repeat;;  background-color: transparent; background-size: cover;
 background-size: cover;-webkit-background-size: cover;-moz-background-size: cover;background-size: cover;background-attachment: fixed;background-position: center center;background-position-x: 50%;background-position-y: 50%;background-repeat: no-repeat;}
@@ -180,9 +189,13 @@ padding: 20px;
 }
 
 .team img {
+  text-align:center;
   border-radius: 50%;
-  width: 200px;
-  height: 200px;
+  width: 150px;
+  height: 150px;
+}
+.team div {
+  text-align:center;
 }
 .team h4,h5,h6 {
   text-align:center;
