--- a/css/sponsors/styles.css
+++ b/css/sponsors/styles.css
@@ -1,16 +1,12 @@
-body {
-	background: white;
-}
+/* HEADER */
+.sponsor-header {overflow:hidden; background: url('../../img/sinfocheio.jpg') center no-repeat;;  background-color: transparent; background-size: cover;
+background-size: cover;-webkit-background-size: cover;-moz-background-size: cover;background-size: cover;background-attachment: fixed;background-position: center center;background-position-x: 50%;background-position-y: 150%;background-repeat: no-repeat;}
+.sponsor-header h1 { text-align: center; margin:0.5em 0 0 0; padding:0; font-size: 4em;}
+.sponsor-header h1 a, .sponsor-header h1 a:link, .sponsor-header h1 a:visited { color:#FFFFFF; text-decoration:none;}
+.sponsor-header h1 a:hover {text-decoration:none;}
+.sponsor-header .description { margin:1em auto; width:60%; padding:10px 0 10px 0; color: #FFFFFF; text-align: center;}
+.sponsor-header .opacidade {background: url(http://sapoblogs.do.sapo.pt/temp/classico_opacidade.png) repeat; padding:1em 0; height: 200px;}
 
-header {
-	background: white;
-}
-
-header h1 small:before  {
-	content: "|";
-	margin: 0 0.5em;
-	font-size: 1.6em;
-}
 
 table {
 	margin-bottom: 0px;
@@ -70,8 +66,4 @@ table :hover {
 .selected .bronze {
 	background: #A8672A !important;
 	color: #555555;
-}
-
-footer {
-	background: #EDEDED;
 }
