--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,28 @@ background-size: cover;-webkit-background-size: cover;-moz-background-size: cove
 .news .description { margin:1em auto; width:60%; padding:10px 0 10px 0; color: #FFFFFF; text-align: center;}
 .news .opacidade {background: url(http://sapoblogs.do.sapo.pt/temp/classico_opacidade.png) repeat; padding:1em 0; height: 400px;}
 
+/* news */
+.orador {overflow:hidden; background: url('../img/news.jpg') bottom no-repeat;;  background-color: transparent; background-size: cover;
+background-size: cover;-webkit-background-size: cover;-moz-background-size: cover;background-size: cover;background-attachment: fixed;background-position: center center;background-position-x: 50%;background-position-y: 50%;background-repeat: no-repeat;}
+.orador h1 { text-align: center; margin:2em 0 0 0; padding:0; font-size: 4em;}
+.orador h1 a, .orador h1 a:link, .orador h1 a:visited { color:#FFFFFF; text-decoration:none;}
+.orador h1 a:hover {text-decoration:none;}
+.orador .description { margin:1em auto; width:60%; padding:10px 0 10px 0; color: #FFFFFF; text-align: center;font-size: 40px;}
+.orador .opacidade {background: url(http://sapoblogs.do.sapo.pt/temp/classico_opacidade.png) repeat; padding:1em 0; height: 400px;}
+#orador_img {margin-left: -156px;}
+#orador_img span {margin-left: 48px;}
+#orador_img img {
+  box-shadow: 0 0 20px rgba(255, 255, 0, 1);
+  -webkit-box-shadow: 0 0 20px rgba(255, 255, 0, 1); 
+  -moz-box-shadow: 0 0 20px rgba(255, 255, 0, 1);
+}
+.orador .opacidade {
+  height: 300px;
+}
+.orador .opacidade h1{
+  margin-top: 55px;
+}
+
 @media (max-width: 400px) {
   .header .description { width:90%; }
   .news .description { width:90%; }
@@ -384,4 +406,9 @@ font-size: 0.8em;
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
   box-shadow: none;
+}
+#topbar .glow {
+  box-shadow: 0 0 20px rgba(255, 255, 0, 1);
+  -webkit-box-shadow: 0 0 20px rgba(255, 255, 0, 1); 
+  -moz-box-shadow: 0 0 20px rgba(255, 255, 0, 1);
 }
