--- a/css/sponsors/styles.css
+++ b/css/sponsors/styles.css
@@ -32,10 +32,6 @@ th {
 	color: white;
 }
 
-td {
-	padding: 5px 5px 5px 5px;
-}
-
 li {
 	list-style-type: none; 
 }
@@ -112,10 +108,29 @@ background-color:#fafafa;
 }
 p { padding: 5px 0; }
 
+.linha td {
+	padding: 5px 5px 5px 5px;
+}
+
 .linha:hover {
   cursor: pointer;
   background-color: #c0c0c0;
   color: white;
+}
+.noPadding {
+	padding: 0px 0px 0px 0px !important; 
+	margin:0;
+}
+
+.shadow {
+	-webkit-box-shadow: inset 0px 15px 5px -10px rgba(0, 0, 0, 0.2);
+	-moz-box-shadow:    inset 0px 15px 5px -10px rgba(0, 0, 0, 0.2);
+	box-shadow:         inset 0px 15px 5px -10px rgba(0, 0, 0, 0.2);
+}
+
+.info {
+	margin: 0;
+	padding-top: 10px;
 }
 
 .descricao:hover{
