Added more info to table
Added info to main event and Anual

--- a/css/sponsors/styles.css
+++ b/css/sponsors/styles.css
@@ -139,3 +139,7 @@ p { padding: 5px 0; }
 	background-color: white;
 	text-decoration: none;
 };
+
+ul 	#apresentacao-info {
+	list-style-type: disc !important;;
+}
