--- a/css/sponsors/styles.css
+++ b/css/sponsors/styles.css
@@ -4,41 +4,23 @@ background-size: cover;-webkit-background-size: cover;-moz-background-size: cove
 .sponsor-header h1 { text-align: center; margin:0.5em 0 0 0; padding:0; font-size: 4em;}
 .sponsor-header h1 a, .sponsor-header h1 a:link, .sponsor-header h1 a:visited { color:#FFFFFF; text-decoration:none;}
 .sponsor-header h1 a:hover {text-decoration:none;}
-.sponsor-header .description { margin:1em auto; width:60%; padding:10px 0 10px 0; color: #FFFFFF; text-align: center;}
+.sponsor-header .description2 { margin:1em auto; width:60%; padding:10px 0 10px 0; color: #FFFFFF; text-align: center;}
 .sponsor-header .opacidade {background: url(http://sapoblogs.do.sapo.pt/temp/classico_opacidade.png) repeat; padding:1em 0; height: 200px;}
 
-body {
-  margin: 20px auto;
-  font: 12px Verdana,Arial, Helvetica, sans-serif;
-}
-
-.content {
-	margin: 0 0 0 0;
-	padding: 0 0 0 0;
-}
-
-.impar {
-	background-color: #f2f2f2;
+h3 {
+	padding-top: 10px;
 }
 
 table {
 	margin-bottom: 0px;
-	background-color: white;
+	font-size: 12px;
+	border-width: 0px;
 }
 
-th {
-	padding: 5px 5px 5px 5px;
-	background-color: #808080;
-	color: white;
-}
-
-li {
-	list-style-type: none; 
-}
-
+/*
 .selected {
-	background: white;
-	color: gray;
+	background: gray !important;
+	color: white;
 }
 
 .pale-gray {
@@ -86,40 +68,62 @@ li {
 .selected .bronze {
 	background: #A8672A !important;
 	color: #555555;
-}
+}*/
 
-.layer1 {
-margin: 0;
-padding: 0;
-width: 700px;
-}
- 
-.heading {
-margin-bottom: 1px;
-color: #fff;
-padding: 7px 10px;
-cursor: pointer;
-position: relative;
-background-color:#c30;
-}
-.content {
-padding: 5px 10px;
-background-color:#fafafa;
-}
-p { padding: 5px 0; }
-
-.linha td {
+td{
 	padding: 5px 5px 5px 5px;
 }
 
-.linha:hover {
-  cursor: pointer;
-  background-color: #c0c0c0;
-  color: white;
+th {
+	padding: 5px 5px 5px 5px;
+	color: white;
+	background-color: #808080;
 }
+
+tbody {
+	text-align: center;
+}
+
+.container {
+	margin-right: auto;
+	margin-left: auto;
+}
+
+.price {
+	background-color: #f2f2f2;
+	border-top-style: solid;
+	border-top-width: 1px;
+}
+
+.perks {
+	font-size: 12px;
+	border-top-style: solid;
+	border-top-width: 1px;
+}
+
+tbody tr:not(.price):not(.alterprice):not(.description):not(.perks):not(.perksDescription):hover {
+	cursor: pointer;
+	background-color: #c0c0c0;
+	color: white;
+}
+
+.heading {
+	margin-top: 1px;
+	padding: 7px 10px;
+	color: #fff;
+	background-color: #c30;
+	cursor: pointer;
+	font-size: 12px;
+	text-align: center;
+}
+
 .noPadding {
 	padding: 0px 0px 0px 0px !important; 
 	margin:0;
+}
+
+.description {
+	display: none;
 }
 
 .shadow {
@@ -128,18 +132,30 @@ p { padding: 5px 0; }
 	box-shadow:         inset 0px 15px 5px -10px rgba(0, 0, 0, 0.2);
 }
 
-.info {
-	margin: 0;
-	padding-top: 10px;
+.alternate {
+	background-color: #f2f2f2;
 }
 
-.descricao:hover{
-	margin: 0 0;
-	padding: 0 0;
-	background-color: white;
-	text-decoration: none;
-};
+.toggle {
+	float: left;
+}
 
-ul 	#apresentacao-info {
-	list-style-type: disc !important;;
+.heading .toggle:active {
+	content: "-";
+}
+
+.PackageContent {
+	text-align:	center;
+	font-size: 12px;
+	padding: 5px 5px 5px 5px;
+}
+
+.indPack {
+	border-top-style: solid;
+	border-top-width: 1px;
+	font-weight: bold;
+}
+
+.indPackDescription {
+	font-size: 12px;
 }
