--- a/css/sponsors/styles.css
+++ b/css/sponsors/styles.css
@@ -89,9 +89,15 @@ tbody {
 	margin-left: auto;
 }*/
 .price {
-	background-color: #f2f2f2;
+	color: white;
+	background-color: #00b300;
 	border-top-style: solid;
 	border-top-width: 1px;
+}
+
+.alterprice {
+	color: white;
+	background-color: #c0c0c0;
 }
 
 .perks {
