--- a/css/sponsors/styles.css
+++ b/css/sponsors/styles.css
@@ -17,59 +17,6 @@ table {
 	border-width: 0px;
 }
 
-/*
-.selected {
-	background: gray !important;
-	color: white;
-}
-
-.pale-gray {
-	background: #999 !important;
-	color: white;
-}
-
-.pale-gray * {
-	color: white;
-}
-
-.pale-gray a {
-	color: blue;
-}
-
-.pale-gray h3 {
-	margin-top: 5px;
-}
-
-.gold {
-	background: #FFD700 !important;
-	color: #555555;
-}
-
-.silver {
-	background: #CCC !important;
-	color: #555555;
-}
-
-.bronze {
-	background: #CD7F32 !important;
-	color: #555555;
-}
-
-.selected .gold {
-	background: #FFB600 !important;
-	color: #555555;
-}
-
-.selected .silver {
-	background: #999999 !important;
-	color: #555555;
-}
-
-.selected .bronze {
-	background: #A8672A !important;
-	color: #555555;
-}*/
-
 td{
 	padding: 5px 5px 5px 5px;
 }
@@ -145,6 +92,10 @@ tbody tr:not(.price):not(.alterprice):not(.description):not(.perks):not(.perksDe
 	float: left;
 }
 
+.toggleHead {
+	float: left;
+}
+
 .PackageContent {
 	text-align:	center;
 	font-size: 12px;
@@ -159,4 +110,22 @@ tbody tr:not(.price):not(.alterprice):not(.description):not(.perks):not(.perksDe
 
 .indPackDescription {
 	font-size: 12px;
+}
+
+.submit {
+	margin: auto auto;
+}
+
+.email-err, .company-err {
+	font-size: 12px;
+	color: red;
+}
+
+.email-valid, .company-valid {
+	font-size: 12px;
+	color: green;
+}
+
+.valid {
+	border: 1px solid green;
 }
