--- a/css/sponsors/styles.css
+++ b/css/sponsors/styles.css
@@ -53,7 +53,11 @@ tbody {
 	border-top-width: 1px;
 }
 
-tbody tr:not(.price):not(.alterprice):not(.description):not(.perks):not(.perksDescription):hover {
+.choose {
+	float: left;
+}
+
+tbody tr:not(.price):not(.alterprice):not(.description):not(.perks):not(.perksDescription):not(.choose):hover {
 	cursor: pointer;
 	background-color: #c0c0c0;
 	color: white;
