--- a/css/sponsors/styles.css
+++ b/css/sponsors/styles.css
@@ -80,6 +80,12 @@ tbody tr:not(.price):not(.alterprice):not(.discount):not(.description):not(.perk
 	color: white;
 }
 
+tbody td:not(.firstTd):not(.noPadding) {
+	border-left-style: solid;
+	border-left-width: 1px;
+	border-left-color: #808080;
+}
+
 .heading {
 	margin-top: 1px;
 	padding: 7px 10px;
@@ -168,4 +174,8 @@ tbody tr:not(.price):not(.alterprice):not(.discount):not(.description):not(.perk
 .reasons {
 	text-align: center;
 	font-size: 20px;
+}
+
+.notIncluded {
+	color: #c30;
 }
