Changed css so when printed the itens are allways visible

--- a/css/sponsors/styles.css
+++ b/css/sponsors/styles.css
@@ -110,6 +110,16 @@ tbody td:not(.firstTd):not(.noPadding) {
 	display: none;
 }
 
+.content {
+	display: none;
+}
+
+@media print {
+	.content {
+		display: block;
+	}
+}
+
 .description ul {
 	display: table;
     margin: 0 auto;
