--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ background-size: cover;-webkit-background-size: cover;-moz-background-size: cove
 .header .description { margin:1em auto; width:60%; padding:10px 0 10px 0; color: #FFFFFF; text-align: center;}
 .header .opacidade {background: url(http://sapoblogs.do.sapo.pt/temp/classico_opacidade.png) repeat; padding:1em 0; height: 500px;}
 
-.text-section {
+.text-section:not(.prev-spekears){
   padding-top: 50px;
   padding-bottom: 25px;
 }
@@ -88,6 +88,16 @@ height: 400px;}
 .orador .opacidade h1{
   margin-top: 55px;
 }
+
+/* Speakers */
+.previousSpeakers {overflow:hidden; background: url('../img/speakers.jpg') center no-repeat;;  background-color: transparent; background-size: cover;
+background-size: cover;-webkit-background-size: cover;-moz-background-size: cover;background-size: cover;background-attachment: fixed;background-position: center center;background-position-x: 50%;background-position-y: 50%;background-repeat: no-repeat;}
+.previousSpeakers h1 { text-align: center; margin:1em 0 0 0; padding:0; font-size: 4em;}
+.previousSpeakers h1 a, .speakers h1 a:link, .speakers h1 a:visited { color:#FFFFFF; text-decoration:none;}
+.previousSpeakers h1 a:hover {text-decoration:none;}
+.previousSpeakers .description { margin:1em auto; width:60%; padding:10px 0 10px 0; color: #FFFFFF; text-align: center;}
+.previousSpeakers .opacidade {background: url(http://sapoblogs.do.sapo.pt/temp/classico_opacidade.png) repeat; padding:0.5em 0; height: 300px;}
+
 
 @media (max-width: 400px) {
   .header .description { width:90%; }
