--- a/css/sponsors/styles.css
+++ b/css/sponsors/styles.css
@@ -1,14 +1,20 @@
 /* HEADER */
-.sponsor-header {overflow:hidden; background: url('../../img/sponsors/BannerSiteSponsors2.png') center no-repeat;;  background-color: transparent; background-size: cover;
+.sponsor-header {overflow:hidden; background: url('../../img/sinfocheio.jpg') center no-repeat;;  background-color: transparent; background-size: cover;
 background-size: cover;-webkit-background-size: cover;-moz-background-size: cover;background-size: cover;background-attachment: fixed;background-position: center center;background-position-x: 50%;background-position-y: 150%;background-repeat: no-repeat;}
 .sponsor-header h1 { text-align: center; margin:0.5em 0 0 0; padding:0; font-size: 4em;}
 .sponsor-header h1 a, .sponsor-header h1 a:link, .sponsor-header h1 a:visited { color:#FFFFFF; text-decoration:none;}
 .sponsor-header h1 a:hover {text-decoration:none;}
 .sponsor-header .description2 { margin:1em auto; width:60%; padding:10px 0 10px 0; color: #FFFFFF; text-align: center;}
-.sponsor-header .opacidade {background: url(http://sapoblogs.do.sapo.pt/temp/classico_opacidade.png) repeat; padding:1em 0; height: 200px;}
+.sponsor-header .opacidade {background: url('../../img/sinfo_topo_sem_desque.jpg') repeat; padding:1em 0; height: 200px;}
 
 h3 {
 	padding-top: 10px;
+}
+
+h3 span {
+    font-size: 10px;
+    font-weight: 400;
+    float: right;
 }
 
 table {
@@ -95,7 +101,7 @@ tbody td:not(.firstTd):not(.noPadding) {
 	margin-top: 1px;
 	padding: 7px 10px;
 	color: #fff;
-	background-color: #c30;
+	background-color: #0069A1;
 	cursor: pointer;
 	font-size: 12px;
 	text-align: center;
@@ -214,9 +220,4 @@ tbody td:not(.firstTd):not(.noPadding) {
 
 .rollup {
 	width:130%;
-}
-
-.promo-video {
-	margin: auto;
-    width: 50%;
 }
