--- a/css/sponsors/styles.css
+++ b/css/sponsors/styles.css
@@ -107,6 +107,10 @@ tbody td:not(.firstTd):not(.noPadding) {
 	text-align: center;
 }
 
+.heading:hover {
+    background-color: #1B97CE;
+}
+
 .noPadding {
 	padding: 0px 0px 0px 0px !important; 
 	margin:0;
